# apriltags_detector

./: CMakeLists.txt  package.xml
AprilTags/: apriltagdetector.h
include/: Homography33.h  Quad.h
include/AprilTags/: TagDetection.h
msg/: apriltagmessage.msg
src/: GrayModel.cc  Quad.cc  TagDetector.cc  apriltagdetector.cpp
src/AprilTags/: TagDetection.cc  fails
